--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@expo/ui": "~0.1.1-alpha.10",
     "@expo/vector-icons": "^14.1.0",
     "@google/genai": "^1.17.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "compute-cosine-similarity": "^1.1.0",
     "expo": "~53.0.20",
     "expo-av": "^15.1.7",
     "expo-blur": "~14.1.5",
@@ -33,6 +35,7 @@
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
     "immer": "^10.1.1",
+    "js-sha256": "^0.11.1",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -45,6 +48,7 @@
     "react-native-svg": "^15.12.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "string-similarity": "^4.0.4",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
