--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@react-navigation/native": "^7.1.6",
     "compute-cosine-similarity": "^1.1.0",
     "expo": "~53.0.20",
-    "expo-av": "^15.1.7",
+    "expo-audio": "^0.4.8",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
