removed hashing, just asking ai not to send previously asked questions manually

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,10 +4,5 @@
     "source.organizeImports": "explicit",
     "source.sortMembers": "explicit"
   },
-  "cSpell.words": [
-    "Entypo",
-    "genai",
-    "nativewind",
-    "Pressable"
-  ]
+  "cSpell.words": ["closecircle", "Entypo", "genai", "nativewind", "Pressable"]
 }
