--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "expo-atlas": "^0.4.0",
+    "music-metadata": "^11.9.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react-native-bundle-visualizer": "^3.1.3",
     "tailwindcss": "^3.4.17",
